--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
+    "node-sass": "4.14.1",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
