--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "classnames": "^2.3.1",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
     "node-sass": "4.14.1",
