--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@craco/craco": "^6.2.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.0",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "graphql": "^15.5.1",
     "classnames": "^2.3.1",
+    "graphql": "^15.5.1",
     "husky": "^7.0.1",
     "lint-staged": "^11.0.1",
     "node-sass": "4.14.1",
@@ -61,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-testing": "^4.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^9",
@@ -74,6 +75,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^7",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
+    "react-test-renderer": "^17.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "waait": "^1.0.5"
   }
 }
