--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.0",
-    "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "classnames": "^2.3.1",
@@ -62,7 +61,9 @@
   },
   "devDependencies": {
     "@apollo/react-testing": "^4.0.0",
+    "@types/react": "^17.0.15",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/parser": "^4.28.3",
     "autoprefixer": "^9",
     "eslint": "^7.30.0",
@@ -77,6 +78,7 @@
     "postcss": "^7",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-jest": "^27.0.4",
     "waait": "^1.0.5"
   }
 }
